--- a/sections/hero-section.liquid
+++ b/sections/hero-section.liquid
@@ -1,62 +1,63 @@
-<!-- SECTION -->
 <div class="section">
-  <!-- container -->
   <div class="container">
-    <!-- row -->
     <div class="row">
-      <!-- shop -->
-      <div class="col-md-4 col-xs-6">
-        <div class="shop">
-          <div class="shop-img">
-            <img src="./img/shop01.png" alt="">
-          </div>
-          <div class="shop-body">
-            <h3>
-              Laptop<br>
-              Collection
-            </h3>
-            <a href="#" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
-          </div>
-        </div>
-      </div>
-      <!-- /shop -->
-
-      <!-- shop -->
-      <div class="col-md-4 col-xs-6">
-        <div class="shop">
-          <div class="shop-img">
-            <img src="./img/shop03.png" alt="">
-          </div>
-          <div class="shop-body">
-            <h3>
-              Accessories<br>
-              Collection
-            </h3>
-            <a href="#" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
+      {% for block in section.blocks %}
+        <div class="col-md-4 col-xs-6">
+          <div class="shop">
+            <div class="shop-img">
+              <img
+                src="{{ block.settings.image_1 | img_url: 'master' }}"
+                class=""
+                alt=""
+                width="auto"
+                height="auto"
+              >
+            </div>
+            <div class="shop-body">
+              <h3>
+                {% assign banner_text = block.settings.banner_text | split: ',' %}
+                {% for banner in banner_text %}
+                  {{ banner | append: '<br>' }}
+                {% endfor %}
+              </h3>
+              <a href="{{ product.url }}" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
+            </div>
           </div>
         </div>
-      </div>
-      <!-- /shop -->
-
-      <!-- shop -->
-      <div class="col-md-4 col-xs-6">
-        <div class="shop">
-          <div class="shop-img">
-            <img src="./img/shop02.png" alt="">
-          </div>
-          <div class="shop-body">
-            <h3>
-              Cameras<br>
-              Collection
-            </h3>
-            <a href="#" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
-          </div>
-        </div>
-      </div>
-      <!-- /shop -->
+      {% endfor %}
     </div>
-    <!-- /row -->
   </div>
-  <!-- /container -->
 </div>
-<!-- /SECTION -->
+
+{% schema %}
+{
+  "name": "Hero Section",
+  "enabled_on": {
+    "templates": ["index"]
+  },
+  "blocks": [
+    {
+      "type": "hero_section",
+      "name": "Select Image",
+      "limit": 3,
+      "settings": [
+        {
+          "type": "image_picker",
+          "id": "image_1",
+          "label": "Select Image"
+        },
+        {
+          "type": "text",
+          "id": "banner_text",
+          "label": "Hero Text"
+        }
+      ]
+    }
+  ],
+  "presets": [
+    {
+      "name": "Hero Section"
+    }
+  ]
+}
+{% endschema %}
